<resources>
    <string name="app_name">Swifty Companion</string>
    <!--
  Auth0 identifiers and settings
  ==============================
  -->

    <!-- Identifiers -->
    <string name="com_auth0_scheme">app</string>

    <!-- Settings -->
    <string name="login_scopes">openid profile email read:current_user update:current_user_metadata</string>
    <string name="login_audience">https://%1$s/api/v2/</string>


    <!--
    Main activity
    =============
    -->

    <!-- Title -->
    <string name="initial_title">Welcome to the app!</string>
    <string name="logged_in_title">You\'re logged in.</string>
    <string name="logged_out_title">You\'re logged out.</string>

    <!-- "Log in" and "Log out" buttons -->
    <string name="button_login">Log in</string>
    <string name="button_logout">Log out</string>

    <!-- User profile -->
    <string name="user_profile">
        Name: %1$s\n
        Email: %2$s
    </string>

    <!-- Metadata -->
    <string name="textview_metadata_heading">Metadata</string>
    <string name="textview_metadata_info">Use the text box and buttons below to get and set the \'country\' field in the user\'s metadata.</string>

    <!-- "Get" and "Set" buttons -->
    <string name="button_get">Get</string>
    <string name="button_set">Set</string>

    <!-- SnackBar messages-->
    <string name="login_success_message">Successfully logged in! %1$s</string>
    <string name="login_failure_message">Failed to log in. %1$s</string>
    <string name="general_failure_with_exception_code">Failed - exception code: %1$s</string>
    <string name="general_success_message">Success!</string>
    <string name="made_by_aglorios_42brussels">made by Aglorios @42Brussels</string>
    <string name="connection_refused">Connection refused</string>
    <string name="login">login</string>
    <string name="swifty_companion">Swifty Companion</string>
    <string name="input_new_token">Input new token</string>
    <string name="todo">TODO</string>
    <string name="projects">Projects</string>
    <string name="skills">Skills</string>
    <string name="more">more</string>
    <string name="logout">logout</string>
    <string name="search_42_user">Search 42 User</string>
    <string name="search">search</string>
    <string name="pseudo">Pseudo</string>
    <string name="personnal_informations">Personnal informations</string>
    <string name="level">Level</string>
    <string name="campus">Campus</string>
    <string name="money">Money</string>
    <string name="since">Since</string>
    <string name="looking_for_someone">Looking for someone ?</string>
    <string name="back">back</string>
    <string name="my_profile">my profile</string>
    <string name="erase_or_recreate_token">Erase/recreate token</string>
    <string name="mainUser">aglorios</string>
    <string name="username">username</string>
    <string name="reload">reload</string>
</resources>